common-applications/test-environment/discourse/discourse.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
  namespace: discourse
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-server
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: discourse
spec:
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: web-server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/discourse:v1.1.8
        command:
        - /bin/bash
        - -c
        - |
          rails db:migrate
          /sbin/boot
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 1500Mi
          limits:
            cpu: 2
            memory: 3000Mi
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: discourse-storage
          mountPath: /shared
      volumes:
      - name: discourse-storage
        persistentVolumeClaim:
          claimName: discourse-share-volume-sfs-turbo
