common-applications/test-environment/discourse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: discourse-ingress
  namespace: discourse
spec:
  tls:
    - hosts:
        - discourse.test.osinfra.cn
      secretName: discourse-tls
  rules:
    - host: discourse.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: web-server
              servicePort: 80
            path: /
